# ploot

./: .gitignore  Cargo.toml  LICENSE  README.md  feed_input.rs  gen_sine.go  go.mod  main.go  ploot.bash  ttyplot-rs.bash
src/: main.rs
