[package]
name = "ttyplot-rs"
version = "0.1.0"
authors = ["Michael Mogenson <michael.mogenson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.8.0"
termion = "1.5.4"
float-pretty-print = "0.1.0"
failure = "0.1.6"
